# api/docs/swagger.yaml
@@ -1,5 +1,16 @@
 basePath: /api/v1
 definitions:
+  dto.FacultyProgramTree:
+    properties:
+      faculty_id:
+        type: integer
+      name:
+        type: string
+      programs:
+        items:
+          $ref: '#/definitions/dto.ProgramShortResponse'
+        type: array
+    type: object
   dto.FieldShortInfo:
     description: Краткая информация о направлении подготовки.
     properties:
@@ -19,6 +30,19 @@ definitions:
         description: Название направления
         example: Математика
         type: string
+    type: object
+  dto.GroupProgramTree:
+    properties:
+      code:
+        type: string
+      group_id:
+        type: integer
+      name:
+        type: string
+      programs:
+        items:
+          $ref: '#/definitions/dto.ProgramShortResponse'
+        type: array
     type: object
   dto.GroupResponse:
     description: Группа направлений подготовки с их параметрами.
@@ -59,6 +83,31 @@ definitions:
         description: Профиль олимпиады
         example: физика
         type: string
+    type: object
+  dto.ProgramShortResponse:
+    properties:
+      budget_places:
+        type: integer
+      cost:
+        type: integer
+      field:
+        type: string
+      like:
+        type: boolean
+      name:
+        type: string
+      optional_subjects:
+        items:
+          type: string
+        type: array
+      paid_places:
+        type: integer
+      program_id:
+        type: integer
+      required_subjects:
+        items:
+          type: string
+        type: array
     type: object
   dto.UniversityShortResponse:
     description: Ответ API с краткими сведениями об университете.
@@ -119,6 +168,115 @@ info:
   title: OlympGuide API
   version: "1.0"
 paths:
+  /api/v1/university/{id}/programs/by-faculty:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает список программ, распределенных по факультетам, с возможностью
+        фильтрации по предметам, уровню образования и поисковому запросу
+      parameters:
+      - description: ID университета
+        in: path
+        name: id
+        required: true
+        type: string
+      - collectionFormat: csv
+        description: Уровень образования
+        example: '"Бакалавриат"'
+        in: query
+        items:
+          type: string
+        name: degree
+        type: array
+      - collectionFormat: csv
+        description: Предметы ЕГЭ
+        example: '"Русский язык"'
+        in: query
+        items:
+          type: string
+        name: subject
+        type: array
+      - description: Поиск по названию программы
+        example: '"Программная инженерия"'
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.FacultyProgramTree'
+            type: array
+        "400":
+          description: Некорректные параметры запроса
+          schema:
+            $ref: '#/definitions/errs.AppError'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/errs.AppError'
+      summary: Получить образовательные программы университета, сгруппированные по
+        факультетам
+      tags:
+      - programs
+  /api/v1/university/{id}/programs/by-field:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает список программ, распределенных по группам направлений
+        подготовки, с возможностью фильтрации по предметам, уровню образования и поисковому
+        запросу
+      parameters:
+      - description: ID университета
+        in: path
+        name: id
+        required: true
+        type: string
+      - collectionFormat: csv
+        description: Уровень образования
+        example: '"Бакалавриат"'
+        in: query
+        items:
+          type: string
+        name: degree
+        type: array
+      - collectionFormat: csv
+        description: Предметы ЕГЭ
+        example: '"Русский язык"'
+        in: query
+        items:
+          type: string
+        name: subject
+        type: array
+      - description: Поиск по названию программы
+        example: '"Программная инженерия"'
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.GroupProgramTree'
+            type: array
+        "400":
+          description: Некорректные параметры запроса
+          schema:
+            $ref: '#/definitions/errs.AppError'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/errs.AppError'
+      summary: Получить образовательные программы университета, сгруппированные по
+        направлениям подготовки
+      tags:
+      - programs
   /fields:
     get:
       consumes:
@@ -220,7 +378,7 @@ paths:
         по убыванию популярности.
       parameters:
       - collectionFormat: multi
-        description: Фильтр по ID регионов
+        description: Фильтр по названию регионов
         in: query
         items:
           type: string
